--- a/public/back/css/commen.css
+++ b/public/back/css/commen.css
@@ -108,7 +108,13 @@ ul,li{
     font-size: 16px;
 }
 
-
-
+.echarts_1{
+    width: 45%;
+    height: 400px;
+}
+.echarts_2{
+    width: 45%;
+    height: 400px;
+}
 
  
